# OpenDiscon

./: CMakeLists.txt  README.md  cyg_discon.txt
CONFIGURATION/CL-Windcon/src/discon/: discon.c
CONFIGURATION/CL-Windcon/src/ikClwindconInputMod/: ikClwindconInputMod.c
CONFIGURATION/CL-Windcon/src/ikClwindconWTConfig/: ikClwindconWTConfig.c  ikClwindconWTConfig.h
CONFIGURATION/CL-Windcon/src/ikSpdman/: ikSpdman.c
CONFIGURATION/DOCC-OFF/: CMakeLists.txt
CONFIGURATION/DOCC-OFF/src/discon/: discon.c
CONFIGURATION/DOCC-OFF/src/ikClwindconWTCon/: ikClwindconWTCon.c  ikClwindconWTCon.h
CONFIGURATION/DOCC-OFF/src/ikClwindconWTConfig/: ikClwindconWTConfig.c
CONFIGURATION/DOCC-OFF/src/sfunc/: makeOpenDiscon.m  sfunc.c
CONFIGURATION/MOORINGSENSE/: CMakeLists.txt
CONFIGURATION/MOORINGSENSE/src/discon/: discon.c
CONFIGURATION/MOORINGSENSE/src/ikMooringWTCon/: ikMooringWTCon.c  ikMooringWTCon.h
CONFIGURATION/MOORINGSENSE/src/ikMooringWTConfig/: ikMooringWTConfig.c  ikMooringWTConfig.h
CONFIGURATION/MOORINGSENSE/src/ikMooringWTPitchOffset/: ikMooringWTPitchOffset.c  ikMooringWTPitchOffset.h
DLC_config/: AllBladesToFine.par  Blade1ToFeather.par  Blade1ToFine.par  Controller.txt  EmergencyStop.par  GridLoss_0.par  GridLoss_2p25.par  GridLoss_5p25.par  NoEvents.par  OverSpeed_n4.par  OverSpeed_nA.par  Stop_Soft_0.par  Stop_Soft_2p25.par  Stop_Soft_4.par  Stop_Soft_5p25.par  YawRunAwayMinus.par  YawRunAwayPlus.par
FarmControl/: CMakeLists.txt  FCDiscon.c
src/discon/: discon.c
src/ikClwindconWTConfig/: ikClwindconWTConfig.c  ikClwindconWTConfig.h
(+1 files in other folders)
